# Cinnamon_Harvest_Scan

./: README.md
cinnamon harvest scan/CinnHarvest-backend/: README.md  main.py  pyproject.toml
cinnamon harvest scan/CinnHarvest-backend/app/: __init__.py  api.py  config.py  ml_pipeline.py  models.py  ruler_reference.py  width_estimation.py  width_inference.py
cinnamon harvest scan/CinnHarvest-backend/model_assets/: ruler_calibration.json  thresholds.json
cinnamon harvest scan/CinnHarvest-backend/scripts/: calibrate_ruler_reference.py  entrypoint.sh
cinnamon harvest scan/CinnHarvest-frontend/: App.tsx  README.md  app.json  package-lock.json  package.json
cinnamon harvest scan/CinnHarvest-frontend/src/: theme.ts  types.ts
cinnamon harvest scan/CinnHarvest-frontend/src/api/: analysisApi.ts
cinnamon harvest scan/CinnHarvest-frontend/src/components/: BottomNav.tsx  ResultSkeleton.tsx  StatusBadge.tsx
cinnamon harvest scan/CinnHarvest-frontend/src/navigation/: types.ts
cinnamon harvest scan/CinnHarvest-frontend/src/screens/: CameraScreen.tsx  CropImageScreen.tsx  HistoryScreen.tsx  HomeScreen.tsx  PhotoPreviewScreen.tsx  ResultScreen.tsx  ThicknessEstimatorScreen.tsx  TipsScreen.tsx  ToolsScreen.tsx
