[project]
name = "flask-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "gunicorn>=25.3.0",
    "mongoengine>=0.29.3",
    "opencv-python-headless>=4.10.0",
    "pillow>=11.3.0",
    "python-dotenv>=1.2.2",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]
